# ICRA-RoboMaster-2020-Perception

./: README.md
Outpost-Camera/: CMakeLists.txt
Outpost-Camera/msg/: OutpostDetected.msg
Outpost-Camera/src/: CvUtils.cpp  CvUtils.h  CvUtilsTest.cpp  Det.cpp  OutpostDetected.h  Window.h
Outpost-Camera/tools/: points.yaml
Outpostcamera/: package.xml
Outpostcamera/launch/: motion_detect.launch  pos_in_world.launch
Outpostcamera/src/: CameraDetNode.cpp  Det.h  RosDet.cpp  RosDet.h  State.h  roboPos.h
Outpostcamera/tools/: config.yaml
RTS-Deploy/config/: config.yaml
RTS-Deploy/src/: customNMS.cu  customNMS.h  detectionSSD.cpp  logger.h  logging.h
RTS-deploy/: CMakeLists.txt  package.xml
RTS-deploy/config/: vision.yaml
RTS-deploy/src/: Detdevice.cpp  bufferManager.h  detection.cpp  detection.h  detectionSSD.h  logger.cpp  target.h
SSD-Detection/: registry.py
SSD-Detection/backbone/VGG/: vgg.py
SSD-Detection/backbone/mobileNet/: mobilenetV3.py
SSD-Detection/backbone/wangshuaiNet/: ws2Net.py  wsNet.py
SSD-Detection/box_head/box_loss/: __init__.py  box_loss.py
SSD-Detection/box_head/box_nms/: process.py
SSD-Detection/data/dataset/: voc.py
SSD-Detection/data/transform/: __init__.py  target_transform.py
SSD-Detection/onnx/: show.py
SSD-Detection/solver/: learning_rate.py  trainer.py
SSD-Detection/utils/: __init__.py  checkpoint.py
SSD-detection/: ssd_detector.py  test.py  train.py
SSD-detection/anchors/anchor_base/: __init__.py  prior_box.py
SSD-detection/backbone/: __init__.py
SSD-detection/backbone/mobileNet/: mobilenetV2.py
SSD-detection/box_head/: __init__.py  box_head.py
SSD-detection/box_head/box_predicion/: __init__.py  box_predict.py
SSD-detection/data/dataset/: __init__.py
SSD-detection/data/dataset/evaluation/voc/: __init__.py
SSD-detection/data/transform/: transform.py
SSD-detection/onnx/: __init__.py
SSD-detection/solver/: __init__.py
SSD-detection/utils/: box_utils.py  setting_dict.py
docs/: _camera_det_node_8cpp.html  _camera_det_node_8cpp.js  _cv_utils_8cpp.html  _cv_utils_8h.html  _cv_utils_8h_source.html  _cv_utils_test_8cpp.html  _cv_utils_test_8cpp.js  _det_8cpp.html  _det_8cpp.js  _det_8h.html  _det_8h.js  _det_8h_source.html  _detdevice_8cpp.html  _detdevice_8cpp.js  _outpost_detected_8h.html  _outpost_detected_8h.js  _outpost_detected_8h_source.html  _outpostcamera_2_c_make_lists_8txt.html  _r_t_s-deploy_2_c_make_lists_8txt.html  _ros_det_8cpp.html  _ros_det_8h.html  _ros_det_8h.js  _ros_det_8h_source.html  _state_8h.html  _state_8h.js  _state_8h_source.html  _window_8h.html  _window_8h.js  _window_8h_source.html  anchors_2____init_____8py.html  anchors_2anchor__base_2____init_____8py.html  anchors_2anchor__base_2____init_____8py.js  anchors_2anchor__free_2____init_____8py.html  annotated.html  annotated_dup.js  backbone_2____init_____8py.html  backbone_2____init_____8py.js  backbone_2efficient_net_2____init_____8py.html  box__head_2____init_____8py.html  box__head_2____init_____8py.js  (+587 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+98 more)
